<resources>

    <string name="app_name">FlashingCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_standard_calc">FlashingCalc_Standard</string>
	<string name="title_activity_programmer_calc">FlashingCalc_Programmer</string>
	
	<string name="ChangeModeToPro">To Programmer Mode</string>
	<string name="ChangeModeToSt">To Standard Mode</string>
	<string name="ZeroName">0</string>
	<string name="DotName">.</string>
	<string name="OneName">1</string>
	<string name="TwoName">2</string>
	<string name="ThreeName">3</string>
	<string name="FourName">4</string>
	<string name="FiveName">5</string>
	<string name="SixName">6</string>
	<string name="SevenName">7</string>
	<string name="EightName">8</string>
	<string name="NineName">9</string>
	<string name="MinusName">-</string>
	<string name="EqualName">=</string>
	<string name="PlusName">+</string>
	<string name="MultiplyName">x</string>
	<string name="DivideName">÷</string>
	<string name="ReciprocalName">1/x</string>
	<string name="RemainderName">%</string>
	<string name="LeftQuote">(</string>
	<string name="RightQuote">)</string>
	<string name="BackSpace">Back</string>
	<string name="CE">CE</string>
	<string name="Ans">Ans</string>
	<string name="sin">sin</string>
	<string name="cos">cos</string>
	<string name="tan">tan</string>
	<string name="pre">Pre</string>
	<string name="next">Next</string>
	<string name="root">√</string>
</resources>